plugins {
    id 'java'
    id 'application'
}

application {
    mainClass = 'edu.gcc.gravy.Main'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'io.javalin:javalin:6.7.0'
    implementation 'org.slf4j:slf4j-simple:2.0.16'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}